Refactor CheckerTest: replace errors.get(0) with errors.getFirst() for improved clarity